# spandex

./: .gitignore  .travis.yml  Cargo.toml  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml  docs.yml
assets/: example.dex
assets/tests/errors/: test-accent.dex  test-mixed-star-slash.dex  test-title-no-new-line.dex  test-unmatched-dollar.dex  test-unmatched-slash.dex  test-unmatched-star.dex
assets/tests/successes/: test-title-1.dex  test-title-2.dex  test-titles.dex
example-md/: main.md
example-txt/: main.txt  spandex.toml
examples/dex/: main.dex  spandex.toml
examples/markdown/: main.md  spandex.toml
examples/text/: spandex.toml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js  trait.Visitor.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
scripts/: deploy.sh
spandex/: all.html  enum.Error.html  fn.build.html  index.html  sidebar-items.js  type.Result.html
spandex/document/: index.html  sidebar-items.js  struct.Document.html  struct.Window.html
spandex/document/configuration/: fn.deserialize_pt.html  fn.serialize_pt.html  index.html  sidebar-items.js  struct.Config.html  struct.PtVisitor.html
spandex/document/counters/: index.html  sidebar-items.js  struct.Counters.html
spandex/fonts/: index.html  sidebar-items.js  struct.Font.html
spandex/fonts/configuration/: index.html  sidebar-items.js  struct.FontConfig.html
spandex/fonts/manager/: index.html  sidebar-items.js  struct.FontManager.html
spandex/fonts/styles/: index.html  sidebar-items.js  struct.FontStyle.html
spandex/layout/: index.html  sidebar-items.js  struct.Glyph.html
spandex/layout/constants/: constant.ADJACENT_LOOSE_TIGHT_PENALTY.html  constant.DASH_GLYPH.html  constant.MAX_COST.html  (+9 more)
spandex/parser/: fn.position.html  index.html  sidebar-items.js  struct.Parsed.html  struct.Position.html  type.Span.html
src/: config.rs  document.rs  font.rs  lib.rs  ligature.rs  main.rs  saturating.rs  tests.rs  units.rs
src/document/: configuration.rs  counters.rs  mod.rs
src/fonts/: configuration.rs  manager.rs  mod.rs  styles.rs
src/layout/: constants.rs  errors.rs  mod.rs
src/parser/: ast.rs  combinators.rs  error.rs  mod.rs  parser.rs  ul-todo.md  utils.rs  warning.rs
src/spandex/: lib.rs.html
src/typography/: items.rs  justification.rs  mod.rs  paragraphs.rs
(+130 files in other folders)
