[package]
name = "spandex"
version = "0.0.4"
description = "A modern LaTeX alternative"
authors = ["Thomas Forgione <thomas@forgione.fr>", "Matthieu Le Boucher <matt.leboucher@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
homepage = "https://rust-spandex.github.io"
documentation = "https://rust-spandex.github.io/spandex"
repository = "https://github.com/rust-spandex/spandex"
readme = "README.md"
keywords = ["tex", "latex", "typesetting"]
categories = ["template-engine", "visualization", "text-processing"]

[badges]
travis-ci = { repository = "rust-spandex/spandex", branch = "master" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
spandex-hyphenation = { version = "0.7.4", features = ["embed_all"] }
nom = "7.1.0"
nom_locate = "4.0.0"
printpdf = { version = "0.4.1", default-features = false } # 0.4.1
freetype-rs = "0.26.0" # 0.28.0
toml = "0.5.8"
petgraph = "0.5.1" # 0.6.0
colored = "2.0.0"
